@@ -1,6 +1,7 @@
 dir = File.expand_path(File.dirname(__FILE__))
 
 require "#{dir}/context/base"
+require "#{dir}/context/functional"
 require "#{dir}/context/model"
 require "#{dir}/context/controller"
 require "#{dir}/context/helper"
