@@ -9,6 +9,7 @@ It also introduces a new approach to handling should expectations. See RELEASE-P
 
 It also sports myriad new features, bug fixes, patches and general goodness:
 
+* Removed unintended block of test/unit assertions in rspec_on_rails - they should all, in theory, now be accessible
 * Added mock_model method to RSpec on Rails, which stubs common methods. Based on http://metaclass.org/2006/12/22/making-a-mockery-of-activerecord
 * Fixed [#8165] Partial Mock Errors when respond_to? is true but the method is not in the object
 * Fixed [#7611] Partial Mocks override Subclass methods
